--- a/src/bitquilts/bitquilts.css
+++ b/src/bitquilts/bitquilts.css
@@ -107,6 +107,7 @@ li {
     padding:0px;
     /* border:solid red 1px; */
     text-align:center;
+    background-color:black;
 }
 
 .album {
@@ -119,25 +120,9 @@ li {
      color:white;
 }
 
-.fadeIn {
-    opacity:1;
-     width:100px;
-     height:100px;
-     transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
-}
-
-.fadeOut {
-    opacity:0;
-     width:0;
-     height:0;
-     transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
-
-}
-
 #centerText {
     height:300px;
     width:300px;
-    border:solid blue 1px;
 }
 
 img {
@@ -156,4 +141,39 @@ p {
 
 #welcome {
     color:white;
+}
+
+#heyyou {
+    border:solid orange 2px;
+    color:white;
+    text-align: center;
+}
+
+.fadeOut{
+    opacity:0;
+    width:0;
+    height:0;
+    transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
+
+}
+
+.fadeIn{
+    opacity:1;
+    width:100px;
+    height:100px;
+    transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
+    width:100%;
+
+}
+
+a.nav-link {
+    margin-left:75px;
+    margin-right:75px;
+    background-color:rgb(0, 142, 177) !important;
+     color:white !important;
+     text-align:center;
+}
+
+ul.nav.navtabs {
+    background-color:black !important;
 }
