--- a/src/bitquilts/bitquilts.css
+++ b/src/bitquilts/bitquilts.css
@@ -2,8 +2,9 @@
     background-color:black;
     padding:10px;
     margin:0px;
-    /* border:solid grey 3px; */
+    /* border:solid orange 3px; */
     padding: 10px;
+    max-height: 100px;
 
 }
 
@@ -107,7 +108,7 @@ li {
     padding:0px;
     /* border:solid red 1px; */
     text-align:center;
-    background-color:black;
+    /* background-color:black; */
 }
 
 .album {
@@ -143,12 +144,6 @@ p {
     color:white;
 }
 
-#heyyou {
-    border:solid orange 2px;
-    color:white;
-    text-align: center;
-}
-
 .fadeOut{
     opacity:0;
     width:0;
@@ -168,12 +163,29 @@ p {
 
 a.nav-link {
     margin-left:75px;
-    margin-right:75px;
-    background-color:rgb(0, 142, 177) !important;
-     color:white !important;
-     text-align:center;
+    margin-right:100px;
+    margin-top:10px;
+    margin-bottom:10px;
+    background: linear-gradient(-90deg, rgb(9, 29, 26), rgb(16, 87, 109));
+    color:white !important;
+    text-align:center;
+    font-size:18px;
+    /* box-shadow: 0px 0px 5px rgb(255, 255, 255); */
 }
 
-ul.nav.navtabs {
-    background-color:black !important;
+a.nav-link:hover {
+    /* margin-left:75px;
+    margin-right:100px;
+    margin-top:10px;
+    margin-bottom:10px;
+    background: linear-gradient(-90deg, rgb(9, 29, 26), rgb(16, 87, 109));
+    color:white !important;
+    text-align:center;
+    font-size:18px;
+    box-shadow: 0px 0px 10px rgb(255, 255, 255); */
+    border:solid rgb(0, 174, 255) 1px !important;
+}
+
+.nav {
+    background-color: black !important;
 }
