--- a/src/profile/profile.css
+++ b/src/profile/profile.css
@@ -1,15 +1,12 @@
-#flag {
+#profilePic {
     max-height:62.5px;
-    max-width:100px;
-    /* border:solid orange 2px; */
-    /* border: solid grey 1px; */
+    max-width:62.5px;
     box-shadow: 0px 0px 15px rgb(206, 206, 206);
     float:left;
     margin-left:20%;
     margin-top:5px;
 }
 
-img #flag {
+img #profilePic {
     background-image: none !important;
 }
-
