--- a/src/profile/profile.css
+++ b/src/profile/profile.css
@@ -3,8 +3,19 @@
     max-width:62.5px;
     box-shadow: 0px 0px 15px rgb(206, 206, 206);
     float:left;
-    margin-left:20%;
-    margin-top:5px;
+    margin-left:3%;
+    display:block;    
+}
+
+#profileDiv {
+    float:left;
+    /* border:solid orange 1px; */
+    margin-left:3%;
+    color:white;
+    max-height: 80px;
+    width:200px;
+    position:absolute;
+    font-size:11px;
 }
 
 img #profilePic {
